# qr_code_api

./: pyproject.toml
qr_code_api/: container.py  endpoints.py  main.py
qr_code_api/services/: __init__.py  qr_code.py
